# fastapi-docker

./: Dockerfile.dev  main.py  pyproject.toml
src/fastapi_docker/: __init__.py
