[project]
name = "fastapi-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Safdar Ali Shah", email = "programmersafdar@live.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[project.scripts]
fastapi-docker = "fastapi_docker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
